<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_gravity="center|end"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAlignment="viewEnd"
            />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_gravity="center|end"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:text="@string/number0"
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/digitAC"
            android:textColor="@color/black"
            android:textSize="40sp"
            />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/digitDelete"
            android:textColor="@color/black"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/digitPercent"
            android:textColor="@color/black"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/digitDivide"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number7"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"

            />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number8"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"
            />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number9"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"
            />


        <Button
            android:id="@+id/btnMulti"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/digitMulti"
            android:textColor="@color/white"
            android:textSize="40sp"
            />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number4"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"
            />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number5"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"
            />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number6"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/digitMinus"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number1"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number2"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number3"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/digitPlus"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/number0"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"
            />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/digitDot"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:background="@drawable/ic_button_circle"/>
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:backgroundTint="@color/orange"
            android:text="@string/digitEqual"
            android:textColor="@color/white"
            android:textSize="40sp"/>
    </GridLayout>

</LinearLayout>